--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "^3.1.1",
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "angular-route": "^1.5.9"
   }
 }
