--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
     "ng-file-upload": "^12.2.13",
-    "angular-route": "^1.5.9"
+    "angular-route": "^1.5.9",
+    "datatables.net": "^1.10.12",
+    "datatables.net-dt": "^1.10.12",
+    "datatables.net-fixedheader": "^3.1.2",
+    "datatables.net-fixedheader-dt": "^3.1.2"
   }
 }
