--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "Amit Roy",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "debug": "^2.3.3",
     "express": "^4.14.0",
+    "fast-csv": "^2.3.0",
     "moment": "^2.17.1",
     "mongodb": "^2.2.11",
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
+    "request": "^2.79.0",
     "xlsx": "^0.8.0"
   }
 }
