--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
     "debug": "^2.3.3",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "fast-csv": "^2.3.0",
     "moment": "^2.17.1",
